# ssi-ordering-challenge

./: .gitattributes  .gitignore  CLAUDE.md  CLAUDE.md.bak  Cargo.toml  Cargo.toml.in  README.md  RULES.md  benchmark.json  deny.toml  opencode.json  results.tsv
.cargo/: config.base.toml
.claude/: settings.json  settings.json.bak
.codex/: config.toml
.cursor/: hooks.json
.github/scripts/: assert-no-network.sh  fetch-eval-corpus.sh
.github/workflows/: benchmark.yml
.opencode/plugin/: yukon-trace.ts
.yukon/hooks/: yukon-trace.sh
corpus/dev/: README.md  patterns.jsonl
corpus/dev/ampl/: ampl_gaslib11_dynamic__iter0.mtx  ampl_gaslib11_dynamic__iter1.mtx  ampl_gaslib40_dynamic__iter0.mtx  ampl_gaslib40_dynamic__iter1.mtx  ampl_gaslib40_dynamic__iter2.mtx  ampl_gaslib40_dynamic__iter3.mtx  ampl_gaslib40_dynamic__iter4.mtx  ampl_tutorial_flow_density__iter0.mtx  ampl_water3__iter0.mtx  ampl_water3__iter1.mtx  ampl_water4__iter0.mtx  ampl_water4__iter1.mtx  ampl_watersbp__iter0.mtx  ampl_watersbp__iter1.mtx
corpus/dev/bratu/: bratu_n10123__iter0.mtx  bratu_n109__iter0.mtx  bratu_n151__iter0.mtx  bratu_n1528__iter0.mtx  bratu_n1620__iter0.mtx  bratu_n17183__iter0.mtx  bratu_n1718__iter0.mtx  bratu_n19326__iter0.mtx  bratu_n2050__iter0.mtx  bratu_n2174__iter0.mtx  bratu_n218__iter0.mtx  bratu_n23053__iter0.mtx  bratu_n2445__iter0.mtx  bratu_n247__iter0.mtx  bratu_n27499__iter0.mtx  bratu_n2750__iter0.mtx  bratu_n279__iter0.mtx  bratu_n291__iter0.mtx  bratu_n303__iter0.mtx  bratu_n32802__iter0.mtx  bratu_n329__iter0.mtx  bratu_n34788__iter0.mtx  bratu_n3479__iter0.mtx  bratu_n357__iter0.mtx  bratu_n36895__iter0.mtx  bratu_n3690__iter0.mtx  bratu_n372__iter0.mtx  bratu_n438__iter0.mtx  bratu_n456__iter0.mtx  bratu_n5000__iter0.mtx  bratu_n500__iter0.mtx  bratu_n52500__iter0.mtx  bratu_n5303__iter0.mtx  bratu_n5624__iter0.mtx  bratu_n671__iter0.mtx  bratu_n7115__iter0.mtx  bratu_n755__iter0.mtx  bratu_n8002__iter0.mtx  bratu_n849__iter0.mtx  bratu_n9546__iter0.mtx
corpus/dev/optctrl/: optctrl_t1080__iter0.mtx  optctrl_t109__iter0.mtx  optctrl_t114__iter0.mtx  optctrl_t118__iter0.mtx  optctrl_t12884__iter0.mtx  optctrl_t1366__iter0.mtx  optctrl_t151__iter0.mtx  optctrl_t16299__iter0.mtx  optctrl_t164__iter0.mtx  optctrl_t17286__iter0.mtx  optctrl_t1729__iter0.mtx  optctrl_t1833__iter0.mtx  optctrl_t19442__iter0.mtx  optctrl_t2062__iter0.mtx  optctrl_t210__iter0.mtx  optctrl_t21868__iter0.mtx  optctrl_t23192__iter0.mtx  optctrl_t258__iter0.mtx  optctrl_t2609__iter0.mtx  optctrl_t280__iter0.mtx  optctrl_t29340__iter0.mtx  optctrl_t3112__iter0.mtx  optctrl_t33000__iter0.mtx  optctrl_t35000__iter0.mtx  optctrl_t3535__iter0.mtx  optctrl_t354__iter0.mtx  optctrl_t4217__iter0.mtx  optctrl_t447__iter0.mtx  optctrl_t45064__iter0.mtx  optctrl_t566__iter0.mtx  optctrl_t6000__iter0.mtx  optctrl_t636__iter0.mtx  optctrl_t69__iter0.mtx  optctrl_t72__iter0.mtx  optctrl_t79__iter0.mtx  optctrl_t805__iter0.mtx  optctrl_t8538__iter0.mtx  optctrl_t85__iter0.mtx  optctrl_t93__iter0.mtx  optctrl_t9603__iter0.mtx  (+1 more)
corpus/dev/poisson/: poisson_k104__iter0.mtx  poisson_k110__iter0.mtx  poisson_k11__iter0.mtx  poisson_k128__iter0.mtx  poisson_k135__iter0.mtx  poisson_k13__iter0.mtx  poisson_k144__iter0.mtx  poisson_k148__iter0.mtx  poisson_k16__iter0.mtx  poisson_k17__iter0.mtx  poisson_k18__iter0.mtx  poisson_k21__iter0.mtx  poisson_k26__iter0.mtx  poisson_k29__iter0.mtx  poisson_k30__iter0.mtx  poisson_k35__iter0.mtx  poisson_k37__iter0.mtx  poisson_k38__iter0.mtx  poisson_k40__iter0.mtx  poisson_k42__iter0.mtx  poisson_k43__iter0.mtx  poisson_k50__iter0.mtx  poisson_k53__iter0.mtx  poisson_k54__iter0.mtx  poisson_k58__iter0.mtx  poisson_k59__iter0.mtx  poisson_k65__iter0.mtx  poisson_k67__iter0.mtx  poisson_k73__iter0.mtx  poisson_k85__iter0.mtx  poisson_k8__iter0.mtx  poisson_k90__iter0.mtx
corpus/dev/rosenbrock/: rosenbrock_n1000__iter0.mtx  rosenbrock_n105000__iter0.mtx  rosenbrock_n11248__iter0.mtx  rosenbrock_n114229__iter0.mtx  rosenbrock_n1423__iter0.mtx  rosenbrock_n16973__iter0.mtx  rosenbrock_n1697__iter0.mtx  rosenbrock_n18001__iter0.mtx  rosenbrock_n1909__iter0.mtx  rosenbrock_n20246__iter0.mtx  rosenbrock_n2025__iter0.mtx  rosenbrock_n236__iter0.mtx  rosenbrock_n2415__iter0.mtx  rosenbrock_n25613__iter0.mtx  rosenbrock_n256__iter0.mtx  rosenbrock_n2716__iter0.mtx  rosenbrock_n278__iter0.mtx  rosenbrock_n289__iter0.mtx  rosenbrock_n3055__iter0.mtx  rosenbrock_n314__iter0.mtx  rosenbrock_n32403__iter0.mtx  rosenbrock_n341__iter0.mtx  rosenbrock_n355__iter0.mtx  rosenbrock_n36445__iter0.mtx  rosenbrock_n4347__iter0.mtx  rosenbrock_n436__iter0.mtx  rosenbrock_n473__iter0.mtx  rosenbrock_n48897__iter0.mtx  rosenbrock_n54998__iter0.mtx  rosenbrock_n5500__iter0.mtx  rosenbrock_n58327__iter0.mtx  rosenbrock_n605__iter0.mtx  rosenbrock_n61859__iter0.mtx  rosenbrock_n6560__iter0.mtx  rosenbrock_n7379__iter0.mtx  rosenbrock_n78256__iter0.mtx  rosenbrock_n875__iter0.mtx  rosenbrock_n88019__iter0.mtx  rosenbrock_n8802__iter0.mtx  rosenbrock_n912__iter0.mtx  (+1 more)
corpus/dev/sparseqp/: sparseqp_n12148__iter0.mtx  sparseqp_n12884__iter0.mtx  sparseqp_n139__iter0.mtx  sparseqp_n14491__iter0.mtx  sparseqp_n1449__iter0.mtx  sparseqp_n15369__iter0.mtx  sparseqp_n16299__iter0.mtx  sparseqp_n164__iter0.mtx  sparseqp_n18333__iter0.mtx  sparseqp_n1833__iter0.mtx  sparseqp_n186__iter0.mtx  sparseqp_n202__iter0.mtx  sparseqp_n210__iter0.mtx  (+26 more)
docs/: DECISION-crate-policy.md  END-TO-END.md  HARNESS-DESIGN.md  WORKFLOW.md
prototype-oracle/: Cargo.toml
prototype-oracle/src/: lib.rs
scripts/: prepare-build.sh
src/: baseline.rs  corpus.rs  failsafe.rs  main.rs  pattern.rs  pattern_io.rs  perm_io.rs  purity.rs  symbolic.rs  watchdog.rs
src/ordering/: amd.rs  bench.rs  candidates.rs  deps.toml  mod.rs  rcm.rs  scoring.rs
ssi-purity/: Cargo.toml
ssi-purity/src/: deps.rs  lib.rs
ssi-purity/tests/: deps_toml.rs
ssi-scoring/: Cargo.toml
ssi-scoring/src/: aggregate.rs  lib.rs  loader.rs  pattern.rs
tests/: exact_equivalence.rs  loader_agreement.rs  narrow_input.rs  scorer_crosscheck.rs  time_cap.rs
(+32 files in other folders)
