[package]
name = "ssi-ordering-challenge"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Fill-reducing ordering challenge for sparse symmetric indefinite factorization"

[workspace]
members = ["ssi-scoring", "ssi-purity", "prototype-oracle"]

# THE HARNESS depends on the scoring wrapper (trusted code). It is the ONLY
# scoring code path shared with the grader (Invariant 2). The submission
# directory src/ordering/ remains stdlib-only — the purity gate (src/purity.rs)
# enforces that contestant code names no crate dependency, so this dependency
# is unreachable from a submission (Invariant 3).
[dependencies]
ssi-scoring = { path = "ssi-scoring" }
ssi-purity = { path = "ssi-purity" }

# Dev-only oracle: the original prototype Σc² scorer + synthetic pattern
# generators. Used only by the cross-check tests in tests/; never linked into
# the shipped harness binary (Invariant 4: closed-form tests / scorer
# cross-check).
[dev-dependencies]
prototype-oracle = { path = "prototype-oracle" }

[profile.release]
opt-level = 3
debug = false
