[package]
name = "ssi-purity"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared Stage-A purity & license gate for the SSI ordering challenge. Used by the public harness (FallbackAllowed mode) and the private grader (RequireDeny mode) so both sides scan submissions identically."

# Stdlib only. The license check shells out to `cargo-deny`; there is no crate
# dependency here, so this lib can never widen the submission's dependency set.
[dependencies]
