[package]
name = "ssi-scoring"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "The ONE scoring code path for the SSI ordering challenge: a thin pattern-pure wrapper over feral's symbolic analysis and AMD baseline. Both the local harness and the private grader score by calling this crate."

# THE SCORING WRAPPER. This is the only code in the workspace that calls
# into feral.
[dependencies]
# feral is pinned to a git rev (= the workspace feral/ checkout's HEAD) so a
# prepared tree copied anywhere by the grader builds without a local feral
# checkout or path-anchoring. The rev freezes the scored code: same rev = same
# scores (Invariant 2). Verified to resolve all three crates from this one repo.
feral = { git = "https://github.com/jkitchin/feral.git", rev = "5ab8074b3c87c96d223e56e8012c38b1cf591e0e" }
feral-amd = { git = "https://github.com/jkitchin/feral.git", rev = "5ab8074b3c87c96d223e56e8012c38b1cf591e0e" }
feral-ordering-core = { git = "https://github.com/jkitchin/feral.git", rev = "5ab8074b3c87c96d223e56e8012c38b1cf591e0e" }
