[package]
name = "ssi-scoring"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "The ONE scoring code path for the SSI ordering challenge: a thin pattern-pure wrapper over feral's symbolic analysis and AMD baseline. Both the local harness and the private grader score by calling this crate."

# THE SCORING WRAPPER. This is the only code in the workspace that calls
# into feral.
[dependencies]
# feral is pinned to exact crates.io releases (feral 0.11.0 == the v0.11.0 tag
# the workspace was formerly pinned to by git rev; feral-* companions at 0.2.1).
# Exact "=" versions freeze the scored code: same versions = same scores
# (Invariant 2). Sourcing from the frozen crates.io registry — not git — lets the
# grader build entirely from a vendored crates.io snapshot with no git-source
# exception (deny.toml: unknown-git = "deny", empty allow-git).
feral = "=0.11.0"
feral-amd = "=0.2.1"
feral-ordering-core = "=0.2.1"
